Fix sidebar gap

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ body {
 .sidebar {
     display: grid;
     /* grid-template-columns: 1fr 3fr; */
-    grid-template-rows: 100px 300px 50px 100px;
+    grid-template-rows: 100px 300px 120px 100px;
     padding: 1rem;
     background-color: var(--bar-btn-color);
     color: var(--foreground-color);
@@ -40,6 +40,7 @@ body {
 .sidebar-medium,
 .sidebar-bottom {
     display: grid;
+    gap: 1rem;
 }
 
 .dashboard-icon {
@@ -65,10 +66,12 @@ body {
     display: grid;
     grid-template-columns: 1fr 3fr;
     padding-bottom: 1rem;
+    align-items: center;
 }
 
 .sidebar-link-title {
     font-size: 1.4rem;
+    font-weight: 500;
 }
 
 a.sidebar-link {
